# Future-AGI-Project

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
data/: sample_gsm8k_dpo_data.jsonl  sample_math_dpo_data.json
docs/: architecture.md  custom_reward_models.md  reward_aggregation.md  step_extraction.md
reward_model/: __init__.py  combined_reward_model.py  outcome_reward_model.py  process_reward_model.py
scripts/: compare_aggregation_strategies.py  test_aggregation_strategies.py  testing_gsm8k_dpo_data.py  testing_math_trained_model.py  train_example.py  train_with_jsonl.py  visualize_step_rewards.py
scripts/results/lora_adapter/: README.md
scripts/results/stepwise_dpo_gsm8k_final/: stepwise_dpo_config.json  stepwise_dpo_config.pt
scripts/results/stepwise_dpo_lora_final/: adapter_config.json
trainer/: __init__.py  config.py  stepwise_dpo.py  utils.py
